Add Radiant Beacon and... various... supporting classes.

--- a/src/main/resources/assets/magicarsenal/lang/en_US.lang
+++ b/src/main/resources/assets/magicarsenal/lang/en_US.lang
@@ -57,6 +57,7 @@ tile.magicarsenal.stele.berkano.name=Berkano Stele
 
 tile.magicarsenal.chaosorb.name=Chaos Nexus Crystal
 tile.magicarsenal.chaosresonator.name=Chaos Resonator
+tile.magicarsenal.beacon.name=Radiant Beacon
 
 #Spell Damage Sources
 death.attack.spell.drainLife=%s wasted away
